--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,20 @@
 {
-    "extends": "@vue/tsconfig/tsconfig.json",
     "compilerOptions": {
         "lib": ["DOM.Iterable", "DOM", "ES2016"],
         "strict": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "types": [
+            "./src/types.d.ts"
+        ],
+        "useDefineForClassFields": true,
+        "paths": {
+            "@/*": ["./src/*"],
+        }
     },
-    "include": ["src"],
+    "include": ["src/**/*.vue", "src/**/*.d.ts", "src/**/*.ts", "src/types.d.ts"],
     "exclude": ["node_modules", ".vscode"]
 }
